--- a/index.html
+++ b/index.html
@@ -15,99 +15,8 @@
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="theme-color" content="#000000">
 
-  <title>eCycle Bike Rentals</title>
+  <title>Really cool portfolio coming here soon. 🐱‍💻</title>
 
-  <!-- Fonts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" >
-
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-  <!-- Custom styles for this template -->
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link href="dist/hamburgers.css" rel="stylesheet">
-
-</head>
-
-<body>
-  <header>
-    <div class="container">
-      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3">
-        <!-- Logo in SVG-->
-        <h5 class="my-0 mr-md-auto"><svg width="47" height="44" viewBox="0 0 47 44" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0)"><path d="M41.1508 6.75751C39.2816 4.71459 37.0172 3.02907 34.4227 1.85097C34.1535 1.72301 33.8781 1.60388 33.5964 1.49136C33.6027 1.60388 33.6048 1.71639 33.6069 1.83332C33.6405 3.2894 33.4492 4.77636 33.0077 6.24347C32.9719 6.35819 32.9383 6.47512 32.9004 6.58543C32.5346 7.69072 32.0447 8.7188 31.456 9.65422C28.3463 14.5894 22.3941 16.9787 16.7509 15.1079C16.2252 14.9336 15.7185 14.7262 15.2328 14.4924C12.6572 13.2503 10.622 11.1941 9.31842 8.72101C8.87269 7.87825 8.51736 6.99136 8.25454 6.06477C7.84875 4.66605 7.65952 3.18791 7.70788 1.68992L0 5.89269C0.708553 10.2146 2.64709 14.2276 5.53807 17.3891C7.60276 19.646 10.1531 21.4683 13.0925 22.6552C13.5004 22.8251 13.9146 22.9773 14.3372 23.1185C23.0248 25.9998 32.1687 22.6354 37.3704 15.4256C38.7791 13.4753 39.8977 11.2427 40.6419 8.77616C40.8438 8.10548 41.012 7.4348 41.1508 6.75751Z" fill="url(#paint0_linear)"/><path d="M46.9117 19.9836C42.3534 31.01 35.3057 34.4142 29.4901 35.1003C27.1542 35.782 24.6123 35.7842 22.1292 34.9591C18.6579 33.8075 15.9772 31.2659 14.4612 28.1023C13.6581 26.4256 13.185 24.568 13.0946 22.6552C13.021 21.0889 13.2081 19.4872 13.6833 17.9031C14.0554 16.6655 14.5853 15.5227 15.235 14.4924C18.3446 9.55716 24.2969 7.16787 29.9401 9.03871C30.4657 9.213 30.9724 9.41817 31.4581 9.65423C34.0337 10.8963 36.069 12.9525 37.3725 15.4256C38.7812 13.4753 39.8998 11.2427 40.6441 8.77618C40.8459 8.1055 41.0162 7.43482 41.1529 6.75752C39.2837 4.71681 37.0193 3.02908 34.4248 1.85099C34.1557 1.72303 33.8802 1.60389 33.5985 1.49138C33.1906 1.3215 32.7764 1.16928 32.3517 1.02808C27.6 -0.549335 22.7074 -0.255913 18.3993 1.51344C15.8489 2.56137 13.5046 4.12997 11.5156 6.13538C10.7229 6.92961 9.98704 7.79222 9.31844 8.71881C7.90974 10.6691 6.79119 12.9017 6.0469 15.3682C5.84505 16.0389 5.67685 16.7096 5.53808 17.3869C5.12599 19.3879 4.98932 21.3955 5.11127 23.3656C5.63059 32.1727 11.2149 40.148 19.7155 42.9697C30.7538 46.6298 42.5279 40.2098 46.0181 28.6274C46.8865 25.7483 47.1619 22.8163 46.9117 19.9836Z" fill="#F5F7F9"/>
-          <path d="M46.9117 19.9814C42.3534 31.0078 35.3057 34.4142 29.4901 35.1003C29.5679 35.0782 29.6457 35.054 29.7214 35.0297C29.7719 35.0143 29.8202 34.9988 29.8686 34.9812C29.9316 34.9613 29.9947 34.9393 30.0578 34.9172C30.184 34.8753 30.308 34.8289 30.432 34.7804C30.4888 34.7605 30.5477 34.7385 30.6045 34.712C30.6171 34.7076 30.6297 34.7032 30.6402 34.6988C30.6949 34.6789 30.7495 34.6569 30.8021 34.6326C30.924 34.5818 31.046 34.5289 31.1679 34.4737C31.2289 34.4473 31.2878 34.4186 31.3488 34.3899C31.4097 34.3612 31.4686 34.3326 31.5296 34.3039C31.805 34.1671 32.0783 34.0215 32.3454 33.8648C32.3853 33.8406 32.4274 33.8163 32.4673 33.792C32.5619 33.7347 32.6565 33.6773 32.749 33.6178C32.8058 33.5825 32.8605 33.5449 32.9172 33.5096C32.9677 33.4766 33.0161 33.4457 33.0644 33.4104C33.2579 33.2802 33.4492 33.1412 33.6363 33C33.6931 32.9559 33.7519 32.9118 33.8087 32.8654C34.0232 32.6978 34.2334 32.5213 34.4374 32.3382C34.492 32.2896 34.5488 32.2389 34.6014 32.1881C34.6644 32.1308 34.7275 32.0712 34.7885 32.0117C34.8516 31.9521 34.9125 31.8903 34.9735 31.8285C35.0345 31.769 35.0955 31.7072 35.1543 31.6432C35.2153 31.5814 35.2742 31.5175 35.3331 31.4535C35.3751 31.4094 35.4151 31.3652 35.455 31.3211C35.4907 31.2814 35.5265 31.2439 35.5601 31.2042C35.6001 31.1579 35.6421 31.1115 35.68 31.063C35.7367 30.9968 35.7935 30.9306 35.8482 30.8622C35.9049 30.7938 35.9596 30.7255 36.0143 30.6571C36.0227 30.6482 36.029 30.6372 36.0374 30.6284C36.1383 30.5004 36.2371 30.3703 36.3318 30.2357C36.3843 30.1651 36.4348 30.0923 36.4852 30.0195C36.5862 29.8739 36.685 29.726 36.7817 29.576C36.8301 29.501 36.8763 29.426 36.9226 29.3488C36.9709 29.2716 37.0151 29.1966 37.0613 29.1171C37.1517 28.9627 37.24 28.8061 37.3242 28.6472C37.362 28.5744 37.3998 28.5038 37.4377 28.431C37.4461 28.4178 37.4524 28.4023 37.4608 28.3891C37.4924 28.3295 37.5218 28.27 37.5512 28.2082C37.5996 28.1111 37.6437 28.0141 37.69 27.9148C37.7278 27.8309 37.7657 27.7471 37.8035 27.6633C37.8414 27.5794 37.8771 27.4956 37.9108 27.4096C37.9465 27.3257 37.9822 27.2397 38.0138 27.1514C38.0159 27.1448 38.018 27.1404 38.0222 27.1338C38.0537 27.0544 38.0832 26.9727 38.1126 26.8933C38.1799 26.7124 38.243 26.5293 38.3018 26.344C38.3292 26.2601 38.3544 26.1763 38.3796 26.0903C38.9095 24.3297 39.0798 22.5361 38.9347 20.8043C39.658 20.0211 40.3455 19.1849 40.9868 18.298C42.4585 16.2573 43.6402 14.0114 44.5001 11.6089C44.6304 11.8626 44.7545 12.1208 44.8764 12.3789C44.908 12.4473 44.9395 12.5157 44.9711 12.5863C45.0468 12.7517 45.1182 12.9172 45.1897 13.0826C45.2255 13.1665 45.2612 13.2503 45.2948 13.3341C45.3201 13.3937 45.3432 13.4555 45.3684 13.5151C45.5135 13.8747 45.6481 14.2409 45.7721 14.6071C45.7889 14.6579 45.8058 14.7064 45.8226 14.7571C45.8499 14.8343 45.8751 14.9116 45.8983 14.991C46.037 15.4256 46.1653 15.8624 46.2767 16.3059C46.2957 16.3809 46.3146 16.4559 46.3335 16.5331C46.3482 16.5905 46.3629 16.65 46.3756 16.7096C46.4365 16.9677 46.4954 17.2281 46.5459 17.4906C46.5564 17.5369 46.5648 17.581 46.5732 17.6274C46.59 17.7112 46.6068 17.795 46.6215 17.8811C46.6363 17.9627 46.651 18.0443 46.6636 18.126C46.6762 18.1944 46.6867 18.2627 46.6972 18.3311C46.7267 18.5143 46.754 18.6952 46.7792 18.8783C46.7898 18.9555 46.8003 19.0327 46.8108 19.1099C46.815 19.1342 46.8171 19.1563 46.8192 19.1805C46.8255 19.2335 46.8318 19.2864 46.8381 19.3394C46.8465 19.4078 46.8528 19.4784 46.8612 19.5467C46.8844 19.6901 46.8991 19.8358 46.9117 19.9814Z" fill="url(#paint1_linear)"/></g><defs><linearGradient id="paint0_linear" x1="36.8398" y1="1.68818" x2="1.32368" y2="19.6771" gradientUnits="userSpaceOnUse"><stop offset="8.73757e-07" stop-color="#C1C8D9"/><stop offset="1" stop-color="#F5F7F9"/></linearGradient><linearGradient id="paint1_linear" x1="26.9027" y1="39.192" x2="49.9843" y2="14.5062" gradientUnits="userSpaceOnUse"><stop offset="8.73757e-07" stop-color="#C1C8D9"/><stop offset="1" stop-color="#F5F7F9"/></linearGradient><clipPath id="clip0"><rect width="47" height="44" fill="white"/></clipPath></defs>
-        </svg></h5>
-        <!-- Nav -->
-        <nav class="my-2 my-md-0 mr-md-3">
-          <a class="hamburger hamburger--elastic" href='#'>
-            <span class="hamburger-box">
-              <span class="hamburger-inner"></span>
-            </span>
-          </a>
-        </nav>
-      </div>
-      <div class="menu">
-        <ul></ul>
-      </div>
-    
-      <!-- Hero Section-->
-      <div class="position-relative overflow-hidden py-3 py-md-5 my-md-3 mh-100">
-        <div class="col-md-5 py-lg-5 my-5">
-          <h1 class="display-2 font-weight-bolder">eCycle</h1>
-          <p class="lead font-weight-normal">Find the nearest eBike, pay <br>online, ride anywhere you like.</p>
-          <button id="appInfo"><a class="btn btn-outline-secondary" href="#">Download App</a></button><div id="app"></div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- Features Section -->
-  <main>
-    <div class="container features">
-    <div class="row">
-      <div class="col-lg-4">
-        <img class ="grp" src="assets/svg/grp1.svg" alt="an illustration of a man">
-        <h4 class="py-3 font-weight-bold">Locate Nearest Kiosk</h4>
-        <p>This is placeholder text as of now, hopefully we will see a change here very soon! How exciting that would be.</p>      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img class ="grp" src="assets/svg/grp2.svg" alt="an illustration of a woman">
-        <h4 class="py-3 font-weight-bold">Pay on App</h4>
-        <p>This is placeholder text as of now, hopefully we will see a change here very soon! How exciting that would be.</p>      </div>
-      <div class="col-lg-4">
-        <img class ="grp" src="assets/svg/grp3-1.png" alt="an illustration of a woman riding a bike">
-        <h4 class="py-3 font-weight-bold">Unlock and Enjoy</h4>
-        <p>This is placeholder text as of now, hopefully we will see a change here very soon! How exciting that would be.</p>      </div>
-    </div>
-  </div>
-
-  <!-- More Info Section -->
-  <div class="container info">
-      <div class="col-md-6">
-        <h1 class="font-weight-bold display-4">Making Canada eBike Friendly</h1>
-        <p>We want Canadians to have alternative ways to reach their destinations. We want tourists to enjoy their stay.  
-        <br>No unfriendly user-interfaces, no pain.</p>
-      </div>
-      <div class="col-md-6">
-        <img class ="bike" src="assets/svg/bike.svg" alt="a bike and canadian flag">
-      </div>
-  </div>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <p class="float-right">
-        <a href="#"><b>Back to top ↑</b></a>
-      </p>
-      <p>© 2017-2020 eCycle </p>
-    </div>
-  </footer>
-
-  <!-- jQuery and Bootstrap Bundle (includes Popper) -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
-  <!-- Global JavaScript -->
-  <script src="assets/js/main.js"></script>
+ 
 </body>
 </html>
