--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:site_name" content="Your portfolio">
-  <meta property="og:title" content="Your portfolio title">
-  <meta property="og:description" content="Your portfolio description.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://<your website url>/">
-  <meta property="og:image" content="https://<your website url>/assets/meta/cover.png">
-
   <!-- <link rel="icon" type="image/png" sizes="512x512" href="/assets/meta/favicon.png"> -->
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="theme-color" content="#000000">
-
+ </head> 
+<body>
   <title>Really cool portfolio coming here soon. 🐱‍💻</title>
 
- 
 </body>
 </html>
