--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <!-- <link rel="icon" type="image/png" sizes="512x512" href="/assets/meta/favicon.png"> -->
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="theme-color" content="#000000">
+  <title>Y'all ain't ready</title>
  </head> 
 <body>
-  <title>Really cool portfolio coming here soon. 🐱‍💻</title>
+  
+  <h1>Really cool portfolio coming here soon. 🐱‍💻</h1>
 
 </body>
 </html>
