--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   
   <h1>Really cool portfolio coming here soon. 🐱‍💻</h1>
+  <p>instagram: @neongraphix; portfolio: behance.net/suhafatima</p>
 
 </body>
 </html>
