--- a/index.html
+++ b/index.html
@@ -34,13 +34,21 @@
   <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Stukram</title>
+  <title>Portfolio | Suha Fatima</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
 
 
-  
+  <!-- preloader start -->
+  <div class="preloader js-preloader">
+    <div class="preloader__bg"></div>
+
+    <div class="preloader__progress">
+      <div class="preloader__progress__inner"></div>
+    </div>
+  </div>
+  <!-- preloader end -->
 
 
   <!-- cursor start -->
