--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Portfolio | Suha Fatima</title>
+  <title>1</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
