--- a/index.html
+++ b/index.html
@@ -1357,8 +1357,8 @@
 
 
   <!-- JavaScript -->
-  <script src="/js/vendors.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="vendors.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
