--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="./css/vendors.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./tree/main/css/vendors.css">
+  <link rel="stylesheet" href="./tree/main/css/main.css">
   <script src="https://kit.fontawesome.com/3a2b9eae0b.js" crossorigin="anonymous"></script>
 
   <!-- Favicon -->
@@ -37,7 +37,7 @@
   <meta name="msapplication-TileImage" content="./img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Suha*</title>
+  <title>CHANGES</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
