--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <meta name="msapplication-TileImage" content="./img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>CHANGES</title>
+  <title>CHANGES1</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
