--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
 
 
   <!-- JavaScript -->
-  <script src="./js/vendors.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="vendors.js"></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
