--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="trashtag.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="./img/trashtag/CoverPhoto.JPG"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="./img/trashtag/CoverPhoto.jpg"></div>
                   </div>
                 </div>
 
