--- a/trashtag.html
+++ b/trashtag.html
@@ -472,41 +472,25 @@
           <!-- row start -->
           <div class="row x-gap-40 y-gap-40">
             <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/project3/square-1.jpg">
-                <div data-parallax="0.7" class="ratio ratio-1:1">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/project3/square-1.jpg"></div>
+              <a data-gallery="gallery1" class="glightbox" href="img/trashtag/img1.jpg">
+                <div data-parallax="1" class="ratio ratio-1:1">
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/trashtag/img1.jpg"></div>
                 </div>
               </a>
             </div>
 
             <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/project3/square-2.jpg">
-                <div data-parallax="0.7" class="ratio ratio-1:1">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/project3/square-2.jpg"></div>
+              <a data-gallery="gallery1" class="glightbox" href="img/trashtag/img3.jpg">
+                <div data-parallax="1" class="ratio ratio-1:1">
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/trashtag/img3.jpg"></div>
                 </div>
               </a>
             </div>
 
             <div class="col-12">
-              <a data-gallery="gallery1" class="glightbox" href="img/project3/wide-1.jpg">
+              <a data-gallery="gallery1" class="glightbox" href="img/trashtag/img9.jpg">
                 <div data-parallax="0.7" class="ratio ratio-16:9">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/project3/wide-1.jpg"></div>
-                </div>
-              </a>
-            </div>
-
-            <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/project3/square-3.jpg">
-                <div data-parallax="0.7" class="ratio ratio-1:1">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/project3/square-3.jpg"></div>
-                </div>
-              </a>
-            </div>
-
-            <div class="col-lg-6">
-              <a data-gallery="gallery1" class="glightbox" href="img/project3/square-4.jpg">
-                <div data-parallax="0.7" class="ratio ratio-1:1">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/project3/square-4.jpg"></div>
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/trashtag/img9.jpg"></div>
                 </div>
               </a>
             </div>
@@ -518,13 +502,7 @@
       <!-- section end -->
 
 
-      <!-- section start -->
-      <div>
-        <div data-parallax="0.7" class="h-80vh">
-          <div data-parallax-target class="bg-image js-lazy" data-bg="img/trashtag/graphic2.png"></div>
-        </div>
-      </div>
-      <!-- section end -->
+      
 
 
       <!-- section start -->
@@ -569,21 +547,41 @@
           <div class="swiper-wrapper">
 
             <div class="swiper-slide slider-slide">
-              <div class="ratio ratio-3:2 bg-image swiper-lazy" data-background="img/project1/slider-1.jpg"></div>
+              <div class="ratio ratio-3:2 bg-image swiper-lazy" data-background="img/trashtag/graphic3.png"></div><p class="leading-5xl mt-24 sm:mt-16"">Two versions of the wordmark</p>
             </div>
 
             <div class="swiper-slide slider-slide">
-              <div class="ratio ratio-3:2 bg-image swiper-lazy" data-background="img/project1/slider-2.jpg"></div>
+              <div class="ratio ratio-3:2 bg-image swiper-lazy" data-background="img/trashtag/graphic4.png"></div><p class="leading-5xl mt-24 sm:mt-16"">Sketches for logo concepts</p>
             </div>
 
-            <div class="swiper-slide slider-slide">
-              <div class="ratio ratio-3:2 bg-image swiper-lazy" data-background="img/project1/slider-3.jpg"></div>
+            <div class="swiper-slide slider-slide"> 
+              <div class="ratio ratio-3:2 bg-image swiper-lazy" data-background="img/trashtag/graphic5.png"></div><p class="leading-5xl mt-24 sm:mt-16"">Monochromatic versions</p>
             </div>
 
           </div>
 
           <div class="pagination -dark pb-4 mt-48 js-pagination"></div>
         </div>
+      </div>
+      <!-- section end -->
+
+      <!-- section start -->
+      <div>
+        <!-- container start -->
+        <div class="container-wide layout-pt-lg">
+          <!-- row start -->
+          <div class="row">
+            <div class="col-12">
+              <a class="glightbox" href="img/trashtag/graphic6.png">
+                <div data-parallax="0.5" class="ratio ratio-16:9">
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/trashtag/graphic6.png"></div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- row end -->
+        </div>
+        <!-- container end -->
       </div>
       <!-- section end -->
 
