--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="vendors.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/vendors.css">
+  <link rel="stylesheet" href="css/main.css">
   <script src="https://kit.fontawesome.com/3a2b9eae0b.js" crossorigin="anonymous"></script>
 
   <!-- Favicon -->
@@ -37,7 +37,7 @@
   <meta name="msapplication-TileImage" content="./img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>CHANGES2</title>
+  <title>CHANGES3</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
@@ -442,8 +442,8 @@
 
 
   <!-- JavaScript -->
-  <script src="vendors.js"></script>
-  <script src="main.js"></script>
+  <script src="js/vendors.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
