--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
   <script src="https://kit.fontawesome.com/3a2b9eae0b.js" crossorigin="anonymous"></script>
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="57x57" href="./img/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./img/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./img/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./img/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./img/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./img/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./img/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./img/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./img/favicon/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="./img/favicon/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <title>CHANGES4</title>
+  <title>Suha*</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
@@ -223,7 +223,7 @@
         <!-- shapes start -->
         <div class="masthead-shapes -group-2">
           <div class="masthead-shapes__item -item-1">
-            <div class="masthead-shapes__shape -white -shadow-light js-shape"><img src="./img/misc/MAC_3.png" height="70%" style="align-items: center;"></div> 
+            <div class="masthead-shapes__shape -white -shadow-light js-shape"><img src="img/misc/MAC_3.png" height="70%" style="align-items: center;"></div> 
           </div>
         </div>
         <!-- shapes end -->
@@ -293,9 +293,10 @@
                   About Me
                 </p>
                 <h2 class="sectionHeading__title leading-lg mt-32">
-                  📌 Based in Toronto, working worldwide.
-                  Lover of nature, books, long walks with good company and seashells.
-
+                  I make visual solutions that are ethical, intelligent & fun, keeping the user in mind at all times. Based in Toronto, working worldwide 📌
+                </h2>
+                
+                <h2 class="sectionHeading__title leading-lg mt-32">  
                   
                 </h2>
                 <a href="about.html" data-barba class="button -underline fw-400 text-lg text-black mt-40">
@@ -315,14 +316,36 @@
       <section class="layout-pt-md layout-pb-md">
         <!-- container start -->
         <div class="container">
+
+           <!-- row start -->
+           <div class="row">
+            <div class="col-lg-8 col-md-10">
+              <div class="sectionHeading -md">
+                <p class="sectionHeading__subtitle">
+                  portfolio
+                </p>
+                <h2 class="sectionHeading__title ">
+                  Selected Projects
+                </h2>
+                <p class="text-lg md:text-base  mt-16">
+                  We create progress by designing and developing digital experiences.
+                </p>
+                <a href ="#" class="button -md -outline-black text-black mt-24"> 
+                  More Work
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- row end -->
+
           <!-- row start -->
-          <div class="fancy-grid -col-2">
+          <div class="fancy-grid -col-2 layout-pt-sm">
 
             <div class="fancy-grid__item">
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="portfolio-single-1.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="./img/projects/vertical/1.jpg"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/projects/vertical/1.jpg"></div>
                   </div>
                 </div>
 
@@ -342,7 +365,7 @@
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="trashtag.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="./img/trashtag/CoverPhoto.jpg"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/trashtag/CoverPhoto.jpg"></div>
                   </div>
                 </div>
 
@@ -362,7 +385,7 @@
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="portfolio-single-3.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="./img/projects/vertical/3.jpg"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/projects/vertical/3.jpg"></div>
                   </div>
                 </div>
 
@@ -382,7 +405,7 @@
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="portfolio-single-4.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="./img/sq/SQ_Cover.png"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/sq/SQ_Cover.png"></div>
                   </div>
                 </div>
 
