--- a/index.html
+++ b/index.html
@@ -86,11 +86,8 @@
         <!-- header__bar start -->
         <div class="header__bar">
           <div class="header__logo js-header-logo">
-            <a data-barba href="home-1.html">
-              <img class="header__logo__light js-lazy" data-srcset="img/logo/logo-light.png 1x, img/logo/logo-light-x2.png 2x" data-src="img/logo/logo-light.png" alt="Logo">
-            </a>
-            <a data-barba href="home-1.html">
-              <img class="header__logo__dark js-lazy" data-srcset="img/logo/SF-dark-08.png 1x, img/logo/logo-dark-x2.png 2x" data-src="img/logo/SF-dark-08.png" alt="Logo">
+            <a data-barba href="/">
+              <img class="header__logo__dark js-lazy" data-srcset="img/logo/SF-dark.png 1x, img/logo/SF-dark.png 2x" data-src="img/logo/SF-dark.png" alt="Logo">
             </a>
           </div>
 
@@ -131,7 +128,7 @@
                       </li>
 
                       <li>
-                        <a data-barba href="About.html">
+                        <a data-barba href="about.html">
                           About
                         </a>
                       </li>
@@ -270,7 +267,7 @@
         
 
         <!-- ui-element start -->
-        <div class="ui-element -bottom-left sm:d-none js-ui">
+        <div class="ui-element -bottom sm:d-none js-ui">
           <button type="button" class="ui-element__scroll text-black js-ui-scroll-button">
             scroll down
             <i class="icon" data-feather="arrow-down"></i>
@@ -313,7 +310,7 @@
 
 
       <!-- section start -->
-      <section class="layout-pt-md layout-pb-md">
+      <section class="layout-pt-xl layout-pb-md">
         <!-- container start -->
         <div class="container">
 
@@ -345,7 +342,7 @@
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="portfolio-single-1.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/projects/vertical/1.jpg"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/ebike/graphic1.png"></div>
                   </div>
                 </div>
 
@@ -355,7 +352,7 @@
                   </p>
 
                   <h3 class="portfolioCard__title overflow-hidden text-2xl fw-600">
-                    Slumber
+                    eBike Rental App
                   </h3>
                 </div>
               </a>
