--- a/trashtag.html
+++ b/trashtag.html
@@ -83,8 +83,8 @@
         <!-- header__bar start -->
         <div class="header__bar">
           <div class="header__logo js-header-logo">
-            <a data-barba href="home-1.html">
-              <img class="header__logo__dark js-lazy" data-srcset="img/logo/SF-dark-08.png 1x, img/logo/logo-dark-x2.png 2x" data-src="img/logo/SF-dark-08.png" alt="Logo">
+            <a data-barba href="/">
+              <img class="header__logo__dark js-lazy" data-srcset="img/logo/SF-dark.png 1x, img/logo/SF-dark.png 2x" data-src="img/logo/SF-dark.png" alt="Logo">
             </a>
           </div>
 
