--- a/index.html
+++ b/index.html
@@ -19,25 +19,20 @@
   <script src="https://kit.fontawesome.com/3a2b9eae0b.js" crossorigin="anonymous"></script>
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
+
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="img/favicon/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="img/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
   <title>Suha*</title>
+
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
@@ -153,24 +148,6 @@
                           <li>
                             <a data-barba href="vertical-projects.html">Vertical Projects</a>
                           </li>
-                          <li>
-                            <a data-barba href="grid-simple-2-col.html">Simple 2 Columns</a>
-                          </li>
-                          <li>
-                            <a data-barba href="grid-masonry-2-col.html">Masonry 2 Columns</a>
-                          </li>
-                          <li>
-                            <a data-barba href="grid-masonry-3-col.html">Masonry 3 Columns</a>
-                          </li>
-                          <li>
-                            <a data-barba href="grid-masonry-4-col.html">Masonry 4 Columns</a>
-                          </li>
-                          <li>
-                            <a data-barba href="grid-fancy-2-col.html">Fancy 2 Columns</a>
-                          </li>
-                          <li>
-                            <a data-barba href="grid-fancy-3-col.html">Fancy 3 Columns</a>
-                          </li>
                         </ul>
                       </li>
 
@@ -192,12 +169,13 @@
                       <div class="nav__info__content text-lg text-white mt-16">
                         <a href="https://www.behance.net/suhafatima">Behance</a>
                         <a href="https://www.youtube.com/channel/UCXYOkw8SnfDcAFmHOK0coAA">Youtube</a>
+                        <a href="https://twitter.com/suhafatima_/">Twitter</a>
                       </div>
                     </div>
 
                     <div class="nav__info__item js-navInfo-item">
                       <h5 class="text-sm tracking-none fw-500">
-                        Let's talk
+                        Got an idea? Let's chat
                       </h5>
 
                       <div class="nav__info__content text-lg text-white mt-16">
@@ -232,31 +210,24 @@
               <div class="masthead__content -left-padding pt-40 z-3">
                 <div data-split="lines" data-split-page-reveal>
                   <p class="masthead__subtitle text-xs uppercase tracking-lg fw-500 mb-40 md:mb-32 js-subtitle">
-                    Hi there
+                    Hi there, I am
                   </p>
                 </div>
 
                 <div data-split="lines" data-split-page-reveal>
                   <h1 class="masthead__title fw-600 js-title">
                     <br>
-                    I'm Suha Fatima<br>
-                    Visual Designer
-                  </h1>
+                    Suha Fatima
+                    </h1>
                 </div>
 
                 <div data-split="lines" data-split-page-reveal>
                   <p class="masthead__text mt-40 md:mt-32 sm:mt-20 js-text">
-                    With a passion for Branding,<br>
-                     UI/UX and Motion Design projects.
+                   I do branding, web design & motion graphics with a keen <br>
+                   interest in UI/UX. I make visual solutions that are ethical, <br>
+                   intelligent & fun while keeping the user in mind. 
+                   Based in <br>Toronto, working worldwide 📌
                   </p>
-                </div>
-
-                <div class="overflow-hidden">
-                  <div class="masthead__button mt-48 md:mt-40 sm:mt-32 js-button">
-                    <a href="#" class="button -md -outline-black text-black">
-                      See the works
-                    </a>
-                  </div>
                 </div>
               </div>
             </div>
@@ -279,38 +250,7 @@
 
 
       <!-- section start -->
-      <section class="layout-pt-xl layout-pb-lg">
-        <!-- container start -->
-        <div data-anim-wrap class="container">
-          <!-- row start -->
-          <div class="row justify-content-center text-center">
-            <div class="col-xl-11 col-lg-10">
-              <div class="sectionHeading -sm">
-                <p class="sectionHeading__subtitle">
-                  About Me
-                </p>
-                <h2 class="sectionHeading__title leading-lg mt-32">
-                  I make visual solutions that are ethical, intelligent & fun, keeping the user in mind at all times. Based in Toronto, working worldwide 📌
-                </h2>
-                
-                <h2 class="sectionHeading__title leading-lg mt-32">  
-                  
-                </h2>
-                <a href="about.html" data-barba class="button -underline fw-400 text-lg text-black mt-40">
-                  Want to know more?
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- row end -->
-        </div>
-        <!-- container end -->
-      </section>
-      <!-- section end -->
-
-
-      <!-- section start -->
-      <section class="layout-pt-xl layout-pb-md">
+      <section class="layout-pt-sm ">
         <!-- container start -->
         <div class="container">
 
@@ -348,7 +288,7 @@
 
                 <div class="portfolioCard__content mt-20">
                   <p class="portfolioCard__category overflow-hidden text-dark mb-8">
-                    Web Design
+                    UI/UX
                   </p>
 
                   <h3 class="portfolioCard__title overflow-hidden text-2xl fw-600">
@@ -382,17 +322,17 @@
               <a data-cursor-icon="arrow-right" data-anim="slide-up delay-2" class="portfolioCard -type-1 -hover" data-barba href="portfolio-single-3.html">
                 <div class="portfolioCard__img">
                   <div class="portfolioCard__img__inner">
-                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/projects/vertical/3.jpg"></div>
+                    <div class="ratio ratio-3:4 bg-image js-lazy" data-bg="img/homertest.gif"></div>
                   </div>
                 </div>
 
                 <div class="portfolioCard__content mt-20">
                   <p class="portfolioCard__category overflow-hidden text-dark mb-8">
-                    Development
+                    Social Media Content
                   </p>
 
                   <h3 class="portfolioCard__title overflow-hidden text-2xl fw-600">
-                    Black Sneakers
+                    UNDP Kuwait
                   </h3>
                 </div>
               </a>
@@ -408,11 +348,11 @@
 
                 <div class="portfolioCard__content mt-20">
                   <p class="portfolioCard__category overflow-hidden text-dark mb-8">
-                    Branding & Social Media
+                    Branding & Website
                   </p>
 
                   <h3 class="portfolioCard__title overflow-hidden text-2xl fw-600">
-                    Trashtag Kuwait
+                    SchoolQonnect
                   </h3>
                 </div>
               </a>
