--- a/grid-masonry-4-col.html
+++ b/grid-masonry-4-col.html
@@ -14,7 +14,6 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/hover.css" media="all">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -360,13 +359,13 @@
                   </a>
                 </li>
                 <li class="breadcrumbs-item active" aria-current="page">
-                  Simple Grid 2
+                  Masonry Grid 4
                 </li>
               </ul>
 
               <div class="sectionHeading -lg">
                 <h1 class="sectionHeading__title">
-                  Simple Grid 2 Cols
+                  Masonry Grid 4 Cols
                 </h1>
               </div>
             </div>
@@ -407,30 +406,11 @@
 
 
           <!-- container start -->
-          <div class="container layout-pt-sm">
-            <div class="masonry -col-2 -gap-32">
+          <div class="container-wide layout-pt-sm">
+            <div class="masonry -col-4 -gap-32">
               <div class="masonry__sizer"></div>
 
-              <div class="masonry__item  web_design">
-                <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
-                  <div class="ratio">
-                    <div class="portfolioCard__img">
-                      <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/1.jpg"></div>
-                      </div>
-                    </div>
-
-                    <div class="portfolioCard__content">
-                      <a href="#" class="portfolioCard__category text-light mb-8">Web Design</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Slumber</h3>
-                    </div>
-
-                    <a href="portfolio-single-1.html" data-barba class="portfolioCard__link"></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="masonry__item  branding">
+              <div class="masonry__item -big branding">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
@@ -449,26 +429,26 @@
                 </div>
               </div>
 
-              <div class="masonry__item  development">
+              <div class="masonry__item web_design">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
                       <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/3.jpg"></div>
+                        <div class="bg-image js-lazy" data-bg="img/projects/square/1.jpg"></div>
                       </div>
                     </div>
 
                     <div class="portfolioCard__content">
-                      <a href="#" class="portfolioCard__category text-light mb-8">Development</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Black Sneakers</h3>
+                      <a href="#" class="portfolioCard__category text-light mb-8">Web Design</a>
+                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Slumber</h3>
                     </div>
 
-                    <a href="portfolio-single-3.html" data-barba class="portfolioCard__link"></a>
+                    <a href="portfolio-single-1.html" data-barba class="portfolioCard__link"></a>
                   </div>
                 </div>
               </div>
 
-              <div class="masonry__item  branding">
+              <div class="masonry__item branding">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
@@ -487,45 +467,26 @@
                 </div>
               </div>
 
-              <div class="masonry__item  web_design">
+              <div class="masonry__item -long development">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
                       <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/5.jpg"></div>
-                      </div>
-                    </div>
-
-                    <div class="portfolioCard__content">
-                      <a href="#" class="portfolioCard__category text-light mb-8">Web Design</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Whisper Pink</h3>
-                    </div>
-
-                    <a href="portfolio-single-5.html" data-barba class="portfolioCard__link"></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="masonry__item  development">
-                <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
-                  <div class="ratio">
-                    <div class="portfolioCard__img">
-                      <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/6.jpg"></div>
+                        <div class="bg-image js-lazy" data-bg="img/projects/vertical/3.jpg"></div>
                       </div>
                     </div>
 
                     <div class="portfolioCard__content">
                       <a href="#" class="portfolioCard__category text-light mb-8">Development</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Summer Time</h3>
+                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Black Sneakers</h3>
                     </div>
 
-                    <a href="portfolio-single-6.html" data-barba class="portfolioCard__link"></a>
+                    <a href="portfolio-single-3.html" data-barba class="portfolioCard__link"></a>
                   </div>
                 </div>
               </div>
 
-              <div class="masonry__item  web_design">
+              <div class="masonry__item web_design">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
@@ -544,7 +505,7 @@
                 </div>
               </div>
 
-              <div class="masonry__item  web_design">
+              <div class="masonry__item web_design">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
@@ -563,40 +524,21 @@
                 </div>
               </div>
 
-              <div class="masonry__item  web_design">
+              <div class="masonry__item -wide development">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
                       <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/9.jpg"></div>
+                        <div class="bg-image js-lazy" data-bg="img/projects/horizontal/6.jpg"></div>
                       </div>
                     </div>
 
                     <div class="portfolioCard__content">
-                      <a href="#" class="portfolioCard__category text-light mb-8">Web Design</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Business model</h3>
+                      <a href="#" class="portfolioCard__category text-light mb-8">Development</a>
+                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Summer Time</h3>
                     </div>
 
-                    <a href="portfolio-single-3.html" data-barba class="portfolioCard__link"></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="masonry__item  web_design">
-                <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
-                  <div class="ratio">
-                    <div class="portfolioCard__img">
-                      <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/10.jpg"></div>
-                      </div>
-                    </div>
-
-                    <div class="portfolioCard__content">
-                      <a href="#" class="portfolioCard__category text-light mb-8">Web Design</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Stonework</h3>
-                    </div>
-
-                    <a href="portfolio-single-4.html" data-barba class="portfolioCard__link"></a>
+                    <a href="portfolio-single-6.html" data-barba class="portfolioCard__link"></a>
                   </div>
                 </div>
               </div>
