--- a/grid-masonry-2-col.html
+++ b/grid-masonry-2-col.html
@@ -14,7 +14,6 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/hover.css" media="all">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -360,13 +359,13 @@
                   </a>
                 </li>
                 <li class="breadcrumbs-item active" aria-current="page">
-                  Simple Grid 2
+                  Masonry Grid 2
                 </li>
               </ul>
 
               <div class="sectionHeading -lg">
                 <h1 class="sectionHeading__title">
-                  Simple Grid 2 Cols
+                  Masonry Grid 2 Cols
                 </h1>
               </div>
             </div>
@@ -408,10 +407,10 @@
 
           <!-- container start -->
           <div class="container layout-pt-sm">
-            <div class="masonry -col-2 -gap-32">
+            <div class="masonry -col-2">
               <div class="masonry__sizer"></div>
 
-              <div class="masonry__item  web_design">
+              <div class="masonry__item web_design">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
@@ -430,7 +429,7 @@
                 </div>
               </div>
 
-              <div class="masonry__item  branding">
+              <div class="masonry__item branding">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
@@ -449,12 +448,12 @@
                 </div>
               </div>
 
-              <div class="masonry__item  development">
+              <div class="masonry__item -wide development">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
                       <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/3.jpg"></div>
+                        <div class="bg-image js-lazy" data-bg="img/projects/horizontal/3.jpg"></div>
                       </div>
                     </div>
 
@@ -468,12 +467,12 @@
                 </div>
               </div>
 
-              <div class="masonry__item  branding">
+              <div class="masonry__item -long branding">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
                       <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/4.jpg"></div>
+                        <div class="bg-image js-lazy" data-bg="img/projects/vertical/4.jpg"></div>
                       </div>
                     </div>
 
@@ -487,7 +486,7 @@
                 </div>
               </div>
 
-              <div class="masonry__item  web_design">
+              <div class="masonry__item web_design">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
@@ -506,7 +505,7 @@
                 </div>
               </div>
 
-              <div class="masonry__item  development">
+              <div class="masonry__item development">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
@@ -525,12 +524,12 @@
                 </div>
               </div>
 
-              <div class="masonry__item  web_design">
+              <div class="masonry__item -wide web_design">
                 <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
                   <div class="ratio">
                     <div class="portfolioCard__img">
                       <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/7.jpg"></div>
+                        <div class="bg-image js-lazy" data-bg="img/projects/horizontal/7.jpg"></div>
                       </div>
                     </div>
 
@@ -540,63 +539,6 @@
                     </div>
 
                     <a href="portfolio-single-1.html" data-barba class="portfolioCard__link"></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="masonry__item  web_design">
-                <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
-                  <div class="ratio">
-                    <div class="portfolioCard__img">
-                      <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/8.jpg"></div>
-                      </div>
-                    </div>
-
-                    <div class="portfolioCard__content">
-                      <a href="#" class="portfolioCard__category text-light mb-8">Web Design</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Immersive design</h3>
-                    </div>
-
-                    <a href="portfolio-single-2.html" data-barba class="portfolioCard__link"></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="masonry__item  web_design">
-                <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
-                  <div class="ratio">
-                    <div class="portfolioCard__img">
-                      <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/9.jpg"></div>
-                      </div>
-                    </div>
-
-                    <div class="portfolioCard__content">
-                      <a href="#" class="portfolioCard__category text-light mb-8">Web Design</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Business model</h3>
-                    </div>
-
-                    <a href="portfolio-single-3.html" data-barba class="portfolioCard__link"></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="masonry__item  web_design">
-                <div data-anim="slide-up" class="portfolioCard -type-2 -hover">
-                  <div class="ratio">
-                    <div class="portfolioCard__img">
-                      <div class="portfolioCard__img__inner">
-                        <div class="bg-image js-lazy" data-bg="img/projects/square/10.jpg"></div>
-                      </div>
-                    </div>
-
-                    <div class="portfolioCard__content">
-                      <a href="#" class="portfolioCard__category text-light mb-8">Web Design</a>
-                      <h3 class="portfolioCard__title text-3xl md:text-2xl fw-600 text-white">Stonework</h3>
-                    </div>
-
-                    <a href="portfolio-single-4.html" data-barba class="portfolioCard__link"></a>
                   </div>
                 </div>
               </div>
