--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/hover.css" media="all">
   <script src="https://kit.fontawesome.com/3a2b9eae0b.js" crossorigin="anonymous"></script>
 
   <!-- Favicon -->
@@ -168,8 +169,6 @@
 
                       <div class="nav__info__content text-lg text-white mt-16">
                         <a href="https://www.behance.net/suhafatima">Behance</a>
-                        <a href="https://www.youtube.com/channel/UCXYOkw8SnfDcAFmHOK0coAA">Youtube</a>
-                        <a href="https://twitter.com/suhafatima_/">Twitter</a>
                       </div>
                     </div>
 
@@ -267,7 +266,7 @@
                 <p class="text-lg md:text-base  mt-16">
                   We create progress by designing and developing digital experiences.
                 </p>
-                <a href ="#" class="button -md -outline-black text-black mt-24"> 
+                <a href ="#" class="button hvr-grow-rotate -md -outline-black text-black mt-24"> 
                   More Work
                 </a>
               </div>
